# smvcar-client

./: CMakeLists.txt  README.md
include/: APList.h  DefaultPalette.h  LapProgressBar.h  LapStopwatch.h  MainWindow.h  ServerAPI.h  ServerDialogue.h  WiFiDialogue.h
src/: APList.cpp  LapProgressBar.cpp  LapStopwatch.cpp  MainWindow.cpp  ServerAPI.cpp  ServerDialogue.cpp  WiFiDialogue.cpp  main.cpp
